--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0f3ea74646.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">    <link rel="stylesheet" href="style.css">
-    <title>A-A Designs</title>
+    <title>
+      A-A Designs</title>
 </head>
 <body>
     <div class="container-fluid" style="margin: 0; padding: 0;">
@@ -56,7 +57,7 @@
 </div>
 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 mb-5">
   <div class="card mx-auto text-center" style="width: 18rem;">
-    <img src="pics/luca-bravo-9l_326FISzk-unsplash.jpg" class="card-img-top" alt="...">
+    <img src="pics/small pref.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -353,6 +354,7 @@
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
+
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
