--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       A-A Designs</title>
 </head>
 <body>
-    <div class="container-fluid" style="margin: 0; padding: 0;">
+    <div class="container-fluid" style="margin: 0; padding: 0; position: fixed; top: 0;z-index: 2;">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark  myHNav d-flex align-items-center justify-content-center">
             <div class="container ">
