--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <a href="#cont1" class="btn btn-danger ">Get Started</a>
     </div>
   </div>
-<div class="container MyCont1 d-flex align-items-center justify-content-center" >
-  <div class="row" id="cont1">
+<div class="container MyCont1 d-flex align-items-center justify-content-center" id="cont1" >
+  <div class="row" >
     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 mb-5 p-0">
       <div class="card mx-auto text-center" style="width: 18rem;">
         <img src="pics/luca-bravo-9l_326FISzk-unsplash.jpg" class="card-img-top" alt="...">
